--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.15",
     "ember-cli-release": "0.2.5",
+    "ember-cli-sass": "4.0.1",
     "ember-cli-uglify": "^1.0.1",
+    "ember-component-css": "0.1.4",
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
