--- a/package.json
+++ b/package.json
@@ -19,24 +19,25 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "1.13.1",
-    "ember-cli-app-version": "0.4.0",
-    "ember-cli-babel": "^5.0.0",
+    "broccoli-asset-rev": "^2.1.2",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
+    "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.0.1",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.15",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "1.0.0",
     "ember-cli-release": "0.2.5",
     "ember-cli-sass": "4.0.1",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-component-css": "0.1.4",
-    "ember-data": "1.13.5",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
-    "emberfire": "firebase/emberfire"
+    "ember-cli-sri": "^1.0.3",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-component-css": "0.1.6",
+    "ember-data": "2.0.0-beta.2",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.3",
+    "emberfire": "1.5.0"
   }
 }
