--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.3.0",
     "moment": "~2.10.6",
-    "qunit": "~1.18.0"
+    "qunit": "~1.18.0",
+    "font-awesome": "~4.4.0"
   }
 }
